# fastokens

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-maturin.yml  build-release-fastokens.yml  ci.yml  python-ci.yml
examples/: simple_bench.rs  validate_model.sh
python/: Cargo.toml
python/fastokens/: __init__.py  _compat.py  _native.pyi  tiktoken.py
python/src/: lib.rs
python/tests/: test_async_stub.py  test_chat_template_special_tokens.py  test_patch_transformers.py  test_split_special_tokens.py  test_thread_safety.py  test_tiktoken_conversion.py  test_unsupported_encode_options.py
src/: added_tokens.rs  known_tokenizers.rs  lib.rs  post_processors.rs  pre_tokenizers.rs
src/models/: bpe.rs
src/pre_tokenizers/: split.rs
vendored_tokenizers/: .gitignore
