[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastokens-b10"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = ["numpy>=1.23.0"]

[tool.maturin]
manifest-path = "python/Cargo.toml"
python-source = "python"
module-name = "fastokens._native"
