[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastokens-b10"
dynamic = ["version"]
requires-python = ">=3.9"

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.13.0"]

[tool.maturin]
manifest-path = "python/Cargo.toml"
python-source = "python"
module-name = "fastokens._native"
