[package]
name = "fastokens-python"
version.workspace = true
edition.workspace = true
description = ""
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
fastokens = { path = ".." }
pyo3 = {version = "0.25", features = ["extension-module", "abi3-py39"] }
rayon = "1"
serde_json = "1"
