[package]
name = "fastokens-python"
version.workspace = true
edition.workspace = true
description = ""
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
fastokens = { package = "fastokens-b10", path = ".." }
pyo3 = {version = "0.25", features = ["extension-module", "abi3-py312"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
rayon = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
